--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -64,6 +64,7 @@
     <script type="text/javascript" src="./services/connectionManager.js"></script>
     <script type="text/javascript" src="./services/sidebarManager.js"></script>
     <script type="text/javascript" src="./services/logger.js"></script>
+    <script type="text/javascript" src="./services/serialPortService.js"></script>
     <script type="text/javascript" src="./directives/effectOptions.js"></script>
     <script type="text/javascript" src="./directives/controls/dropdownSelect.js"></script>
     <script type="text/javascript" src="./directives/effect-option-settings/eosContainer.js"></script>
